syntax = "proto3";

package rv.data;

import "playlist.proto";

message PlaylistTemplate {
  repeated rv.data.PlaylistTemplate.Template templates = 1;

  message Template {
    string name = 1;
    repeated rv.data.PlaylistItem playlist_items = 2;

  }
}
